--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,142 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #09090B;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+:root {
+  --color1: 112, 39, 161;
+  --color2: 195, 43, 173;
+  --color3: 245, 111, 173;
+  --color4: 29, 185, 195;  
+  --circle-size: 90%;
+  --blending: hard-light;
+  --navcolor: rgba(0,0,0,0.1);
+
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  :root {
+    --circle-size: 120%;
   }
+}
+
+@keyframes moveInCircle {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes moveVertical {
+  0% {
+    transform: translateY(-50%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+@keyframes moveHorizontal {
+  0% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+  50% {
+    transform: translateX(50%) translateY(10%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+}
+
+.jumbotron {
+  width: 100%;
+  height: 100svh;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.gradient-container {
+    filter: blur(40px);
+    width: 100%;
+    height: 100%;
+  }
+
+.g1 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 45%) no-repeat;
+  mix-blend-mode: var(--blending);
+
+  width: var(--circle-size);
+  height: var(--circle-size);
+  top: calc(50% - var(--circle-size) / 2);
+  left: calc(50% - var(--circle-size) / 2);
+
+  transform-origin: center center;
+  animation: moveVertical 30s ease infinite;
+
+  opacity: 1;
+}
+
+.g2 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 45%) no-repeat;
+  mix-blend-mode: var(--blending);
+
+  width: calc(var(--circle-size) - 15%) ;
+  height: calc(var(--circle-size) - 15%);
+  top: calc(50% - var(--circle-size) / 2);
+  left: calc(50% - var(--circle-size) / 2);
+
+  transform-origin: calc(50% - 20vw);
+  animation: moveInCircle 20s reverse infinite;
+
+  opacity: 1;
+}
+
+.g3 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 45%) no-repeat;
+  mix-blend-mode: var(--blending);
+
+  width: calc(var(--circle-size) - 10%);
+  height: calc(var(--circle-size) - 10%);
+  top: calc(50% - var(--circle-size) / 2 + 200px);
+  left: calc(50% - var(--circle-size) / 2 - 300px);
+
+  transform-origin: calc(50% + 50vh) calc(50% - 10vw);
+  animation: moveInCircle 30s linear infinite;
+
+  opacity: 1;
+}
+
+.g4 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 45%) no-repeat;
+  mix-blend-mode: var(--blending);
+
+  width: calc(var(--circle-size) - 5%);
+  height: calc(var(--circle-size) - 5%);
+  top: calc(50% - var(--circle-size) / 2);
+  left: calc(50% - var(--circle-size) / 2);
+
+  transform-origin: calc(50% - 20vw);
+  animation: moveHorizontal 30s ease infinite;
+
+  opacity: 0.7;
 }
